@@ -1,5 +1,9 @@
 2009-07-07  Paul Pluzhnikov  <ppluzhnikov@google.com>
 
+	* python/python-value.c (valpy_getitem): Remove incorrect assert.
+	
+2009-07-07  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
 	* python/python-value.c (valpy_getitem): Don't return from TRY_CATCH.
 
 2009-07-07  Sami Wagiaalla  <swagiaal@redhat.com>
